# AEFM

./: .gitignore  MANIFEST.in  README.md  aefm_configs.yaml  experiment.py  pyproject.toml  requirements.txt
AEFM/: __init__.py
AEFM/cli/: __init__.py  commands.py  config_template.py  messages.py  utils.py
AEFM/configs/: __init__.py
AEFM/data_collector/: __init__.py  base.py  jaeger_trace_collector.py  prom_hardware_collector.py  wrk_throughput_collector.py
AEFM/deployer/: __init__.py  base.py  init_media_microsvc_1.py  init_media_microsvc_2.py  init_social_network.py
AEFM/inf_generator/: base.py  interfaces.py
AEFM/manager/: __init__.py  base.py  events.py  handlers.py  interfaces.py
AEFM/models/: node.py  test_case.py  test_cases.py
AEFM/templates/: handlers.py  main.py  (+1 more)
configs/: __init__.py
data_collector/: __init__.py  base.py  hardware_collector.py  interfaces.py  jaeger_trace_collector.py  models.py  prom_hardware_collector.py  throughput_collector.py  trace_collector.py  wrk_throughput_collector.py
deployer/: __init__.py  base.py  init_social_network.py  intrefaces.py
experiment/: __init__.py  base.py  events.py  experiement_manager.py  handlers.py  interfaces.py
inf_generator/: __init__.py  base.py  interfaces.py
manager/: __init__.py  base.py  handlers.py  interfaces.py
models/: __init__.py  node.py  pod_spec.py  test_case.py  test_cases.py
utils/: files.py  jaeger_fetcher.py  kubernetes.py  kubernetes_YAMLs.py  logger.py  prom_fetcher.py  trace_processor.py
workload_generator/: __init__.py  base.py  interfaces.py  wrk.py
(+187 files in other folders)
