[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["AEFM", "AEFM.*"]

[project]
name = "AEFM"
version = "0.1.0"
description = "An automatic experiment framework for microservice."
authors = [{name = "Nick Lin", email = "nicklin9907@gmail.com"}]
license = {file = "license"}
readme = "README.md"
requires-python = '>=3.11'
dependencies = [
    "termcolor>=2.3.0",
    "aiohttp>=3.8.5",
    "ipdb>=0.13.13",
    "PyYAML>=6.0",
    "kubernetes>=27.2.0",
    "pandas==1.1.5",
    "click>=8.1.7"
]